Better Sleeping and Hunger Overhaul nerfs

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -8625,6 +8625,7 @@ minefactoryreloaded {
 
 mo {
     B:androidstation=false
+    B:chargingstation=false
     B:decomposer=false
     B:dilithiumore=true
     B:fusionreactorcoil=true
