--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -2152,120 +2152,196 @@ shedding {
     I:headcrumbs.Human.lexiconDisplaySize=40
     I:headcrumbs.Human.metadata=0
     I:headcrumbs.Human.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Ankylosaurus
     S:jurassicraft.Ankylosaurus.item=
     I:jurassicraft.Ankylosaurus.lexiconDisplaySize=40
     I:jurassicraft.Ankylosaurus.metadata=0
     I:jurassicraft.Ankylosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Arsinoitherium
     S:jurassicraft.Arsinoitherium.item=
     I:jurassicraft.Arsinoitherium.lexiconDisplaySize=40
     I:jurassicraft.Arsinoitherium.metadata=0
     I:jurassicraft.Arsinoitherium.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Brachiosaurus
     S:jurassicraft.Brachiosaurus.item=
     I:jurassicraft.Brachiosaurus.lexiconDisplaySize=40
     I:jurassicraft.Brachiosaurus.metadata=0
     I:jurassicraft.Brachiosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Carnotaurus
     S:jurassicraft.Carnotaurus.item=
     I:jurassicraft.Carnotaurus.lexiconDisplaySize=40
     I:jurassicraft.Carnotaurus.metadata=0
     I:jurassicraft.Carnotaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Coelacanth
     S:jurassicraft.Coelacanth.item=
     I:jurassicraft.Coelacanth.lexiconDisplaySize=40
     I:jurassicraft.Coelacanth.metadata=0
     I:jurassicraft.Coelacanth.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Dilophosaurus
     S:jurassicraft.Dilophosaurus.item=
     I:jurassicraft.Dilophosaurus.lexiconDisplaySize=40
     I:jurassicraft.Dilophosaurus.metadata=0
     I:jurassicraft.Dilophosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Gallimimus
     S:jurassicraft.Gallimimus.item=
     I:jurassicraft.Gallimimus.lexiconDisplaySize=40
     I:jurassicraft.Gallimimus.metadata=0
     I:jurassicraft.Gallimimus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Herrerasaurus
     S:jurassicraft.Herrerasaurus.item=
     I:jurassicraft.Herrerasaurus.lexiconDisplaySize=40
     I:jurassicraft.Herrerasaurus.metadata=0
     I:jurassicraft.Herrerasaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Hypsilophodon
     S:jurassicraft.Hypsilophodon.item=
     I:jurassicraft.Hypsilophodon.lexiconDisplaySize=40
     I:jurassicraft.Hypsilophodon.metadata=0
     I:jurassicraft.Hypsilophodon.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Leptictidium
     S:jurassicraft.Leptictidium.item=
     I:jurassicraft.Leptictidium.lexiconDisplaySize=40
     I:jurassicraft.Leptictidium.metadata=0
     I:jurassicraft.Leptictidium.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Mammoth
     S:jurassicraft.Mammoth.item=
     I:jurassicraft.Mammoth.lexiconDisplaySize=40
     I:jurassicraft.Mammoth.metadata=0
     I:jurassicraft.Mammoth.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Orthacanthus
     S:jurassicraft.Orthacanthus.item=
     I:jurassicraft.Orthacanthus.lexiconDisplaySize=40
     I:jurassicraft.Orthacanthus.metadata=0
     I:jurassicraft.Orthacanthus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Parasaurolophus
     S:jurassicraft.Parasaurolophus.item=
     I:jurassicraft.Parasaurolophus.lexiconDisplaySize=40
     I:jurassicraft.Parasaurolophus.metadata=0
     I:jurassicraft.Parasaurolophus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Stegosaurus
     S:jurassicraft.Stegosaurus.item=
     I:jurassicraft.Stegosaurus.lexiconDisplaySize=40
     I:jurassicraft.Stegosaurus.metadata=0
     I:jurassicraft.Stegosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Titanis
     S:jurassicraft.Titanis.item=
     I:jurassicraft.Titanis.lexiconDisplaySize=40
     I:jurassicraft.Titanis.metadata=0
     I:jurassicraft.Titanis.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Triceratops
     S:jurassicraft.Triceratops.item=
     I:jurassicraft.Triceratops.lexiconDisplaySize=40
     I:jurassicraft.Triceratops.metadata=0
     I:jurassicraft.Triceratops.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Tylosaurus
     S:jurassicraft.Tylosaurus.item=
     I:jurassicraft.Tylosaurus.lexiconDisplaySize=40
     I:jurassicraft.Tylosaurus.metadata=0
     I:jurassicraft.Tylosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Tyrannosaurus
     S:jurassicraft.Tyrannosaurus.item=
     I:jurassicraft.Tyrannosaurus.lexiconDisplaySize=40
     I:jurassicraft.Tyrannosaurus.metadata=0
     I:jurassicraft.Tyrannosaurus.rate=-1
-
-    # Configuration of Shedding for jurassicraft.Velociraptor
     S:jurassicraft.Velociraptor.item=
     I:jurassicraft.Velociraptor.lexiconDisplaySize=40
     I:jurassicraft.Velociraptor.metadata=0
     I:jurassicraft.Velociraptor.rate=-1
+
+    # Configuration of Shedding for jurassicraft.ankylosaurus
+    S:jurassicraft.ankylosaurus.item=
+    I:jurassicraft.ankylosaurus.lexiconDisplaySize=40
+    I:jurassicraft.ankylosaurus.metadata=0
+    I:jurassicraft.ankylosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.arsinoitherium
+    S:jurassicraft.arsinoitherium.item=
+    I:jurassicraft.arsinoitherium.lexiconDisplaySize=40
+    I:jurassicraft.arsinoitherium.metadata=0
+    I:jurassicraft.arsinoitherium.rate=-1
+
+    # Configuration of Shedding for jurassicraft.brachiosaurus
+    S:jurassicraft.brachiosaurus.item=
+    I:jurassicraft.brachiosaurus.lexiconDisplaySize=40
+    I:jurassicraft.brachiosaurus.metadata=0
+    I:jurassicraft.brachiosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.carnotaurus
+    S:jurassicraft.carnotaurus.item=
+    I:jurassicraft.carnotaurus.lexiconDisplaySize=40
+    I:jurassicraft.carnotaurus.metadata=0
+    I:jurassicraft.carnotaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.coelacanth
+    S:jurassicraft.coelacanth.item=
+    I:jurassicraft.coelacanth.lexiconDisplaySize=40
+    I:jurassicraft.coelacanth.metadata=0
+    I:jurassicraft.coelacanth.rate=-1
+
+    # Configuration of Shedding for jurassicraft.dilophosaurus
+    S:jurassicraft.dilophosaurus.item=
+    I:jurassicraft.dilophosaurus.lexiconDisplaySize=40
+    I:jurassicraft.dilophosaurus.metadata=0
+    I:jurassicraft.dilophosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.gallimimus
+    S:jurassicraft.gallimimus.item=
+    I:jurassicraft.gallimimus.lexiconDisplaySize=40
+    I:jurassicraft.gallimimus.metadata=0
+    I:jurassicraft.gallimimus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.herrerasaurus
+    S:jurassicraft.herrerasaurus.item=
+    I:jurassicraft.herrerasaurus.lexiconDisplaySize=40
+    I:jurassicraft.herrerasaurus.metadata=0
+    I:jurassicraft.herrerasaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.hypsilophodon
+    S:jurassicraft.hypsilophodon.item=
+    I:jurassicraft.hypsilophodon.lexiconDisplaySize=40
+    I:jurassicraft.hypsilophodon.metadata=0
+    I:jurassicraft.hypsilophodon.rate=-1
+
+    # Configuration of Shedding for jurassicraft.leptictidium
+    S:jurassicraft.leptictidium.item=
+    I:jurassicraft.leptictidium.lexiconDisplaySize=40
+    I:jurassicraft.leptictidium.metadata=0
+    I:jurassicraft.leptictidium.rate=-1
+
+    # Configuration of Shedding for jurassicraft.mammoth
+    S:jurassicraft.mammoth.item=
+    I:jurassicraft.mammoth.lexiconDisplaySize=40
+    I:jurassicraft.mammoth.metadata=0
+    I:jurassicraft.mammoth.rate=-1
+
+    # Configuration of Shedding for jurassicraft.orthacanthus
+    S:jurassicraft.orthacanthus.item=
+    I:jurassicraft.orthacanthus.lexiconDisplaySize=40
+    I:jurassicraft.orthacanthus.metadata=0
+    I:jurassicraft.orthacanthus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.parasaurolophus
+    S:jurassicraft.parasaurolophus.item=
+    I:jurassicraft.parasaurolophus.lexiconDisplaySize=40
+    I:jurassicraft.parasaurolophus.metadata=0
+    I:jurassicraft.parasaurolophus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.stegosaurus
+    S:jurassicraft.stegosaurus.item=
+    I:jurassicraft.stegosaurus.lexiconDisplaySize=40
+    I:jurassicraft.stegosaurus.metadata=0
+    I:jurassicraft.stegosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.titanis
+    S:jurassicraft.titanis.item=
+    I:jurassicraft.titanis.lexiconDisplaySize=40
+    I:jurassicraft.titanis.metadata=0
+    I:jurassicraft.titanis.rate=-1
+
+    # Configuration of Shedding for jurassicraft.triceratops
+    S:jurassicraft.triceratops.item=
+    I:jurassicraft.triceratops.lexiconDisplaySize=40
+    I:jurassicraft.triceratops.metadata=0
+    I:jurassicraft.triceratops.rate=-1
+
+    # Configuration of Shedding for jurassicraft.tylosaurus
+    S:jurassicraft.tylosaurus.item=
+    I:jurassicraft.tylosaurus.lexiconDisplaySize=40
+    I:jurassicraft.tylosaurus.metadata=0
+    I:jurassicraft.tylosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.tyrannosaurus
+    S:jurassicraft.tyrannosaurus.item=
+    I:jurassicraft.tyrannosaurus.lexiconDisplaySize=40
+    I:jurassicraft.tyrannosaurus.metadata=0
+    I:jurassicraft.tyrannosaurus.rate=-1
+
+    # Configuration of Shedding for jurassicraft.velociraptor
+    S:jurassicraft.velociraptor.item=
+    I:jurassicraft.velociraptor.lexiconDisplaySize=40
+    I:jurassicraft.velociraptor.metadata=0
+    I:jurassicraft.velociraptor.rate=-1
 
     # Configuration of Shedding for mad_scientist
     S:mad_scientist.item=
