--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -6600,6 +6600,22 @@ blocks_pickaxe {
     I:"mo:android_station:7"=2
     I:"mo:android_station:8"=2
     I:"mo:android_station:9"=2
+    I:"mo:charging_station:0"=2
+    I:"mo:charging_station:1"=2
+    I:"mo:charging_station:10"=2
+    I:"mo:charging_station:11"=2
+    I:"mo:charging_station:12"=2
+    I:"mo:charging_station:13"=2
+    I:"mo:charging_station:14"=2
+    I:"mo:charging_station:15"=2
+    I:"mo:charging_station:2"=2
+    I:"mo:charging_station:3"=2
+    I:"mo:charging_station:4"=2
+    I:"mo:charging_station:5"=2
+    I:"mo:charging_station:6"=2
+    I:"mo:charging_station:7"=2
+    I:"mo:charging_station:8"=2
+    I:"mo:charging_station:9"=2
     I:"mo:decomposer:0"=2
     I:"mo:decomposer:1"=2
     I:"mo:decomposer:10"=2
