--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.3.5
+~CONFIG_VERSION: 0.4.0-RC1
 
 ##########################################################################################################
 # client
@@ -9,6 +9,9 @@
 ##########################################################################################################
 
 client {
+    # Use the custom holo shader for holographic items [default: true]
+    B:"use holo shader"=true
+
     # Should Matter Overdrive check for newer versions, every time the world starts
     B:version_check=false
 }
@@ -21,6 +24,8 @@ client {
 ##########################################################################################################
 
 "machine options" {
+    # The range of the Charge Station
+    I:"charge station range"=16
 
     gravitational_stabilizer {
         # The volume of the Machine
@@ -33,8 +38,23 @@ client {
     }
 
     replicator {
-        # Sould vent particles be displayed
+        # The total replication cost of each matter value. The energy cost is calculated like so: (matterAmount*EnergyCost)
+        I:cost.replication.energy=16000
+
+        # Fail chance of the Replicator in percent.
+        D:fail=0.05
+
+        # Should vent particles be displayed
         B:particles.vent=true
+
+        # The replication speed in ticks per matter value
+        I:speed.replication=120
+
+        # How much energy can the replicator hold
+        I:storage.energy=512000
+
+        # How much matter can the replicator hold
+        I:storage.matter=1024
 
         # The volume of the Machine
         D:volume=1.0
@@ -44,7 +64,17 @@ client {
     }
 
     decomposer {
-        # The volume of the Machine
+        # Decomposing cost per matter
+        I:cost.decompose=8000
+
+        # The speed in ticks, of decomposing. (per matter)
+        I:speed.decompose=80
+
+        # How much energy can the Matter Decomposer hold
+        I:storage.energy=512000
+
+        # How much matter can the Matter Decomposer hold
+        I:storage.matter=1024
         D:volume=1.0
     }
 
@@ -59,6 +89,15 @@ client {
     }
 
     fusion_reactor_controller {
+        # The time delay between each structure check
+        I:check.delay=40
+
+        # The maximum distance of the anomaly
+        I:distance.anomaly=3
+
+        # How much matter is drained per tick. Dependant on the size of the anomaly as well
+        D:drain.matter=0.0
+
         # The volume of the Machine
         D:volume=1.0
     }
@@ -66,6 +105,12 @@ client {
     pattern_storage {
         # Sould vent particles be displayed
         B:particles.vent=true
+
+        # How much energy can the Pattern Storage hold
+        I:storage.energy=64000
+
+        # The Transfer speed of the Pattern Storage
+        I:transfer.energy=128
 
         # The volume of the Machine
         D:volume=1.0
@@ -92,6 +137,11 @@ client {
     }
 
     star_map {
+        # The volume of the Machine
+        D:volume=1.0
+    }
+
+    charging_station {
         # The volume of the Machine
         D:volume=1.0
     }
@@ -146,6 +196,16 @@ client {
 }
 
 
+output {
+
+    energy {
+        # The Energy Output per tick. Dependant on the size of the anomaly as well
+        I:tile.fusion_reactor_controller=2048
+    }
+
+}
+
+
 ##########################################################################################################
 # server
 #--------------------------------------------------------------------------------------------------------#
@@ -174,6 +234,12 @@ server {
 ##########################################################################################################
 
 starmap {
+    # The multiplier for the building and ship building times [range: 0.0 ~ 10.0, default: 1.0]
+    S:"galaxy build time multiply"=1.0
+
+    # The multiplier for the ship travel times [range: 0.0 ~ 10.0, default: 1.0]
+    S:"galaxy travel time multiply"=1.0
+
     # The maximum amount of planets pre star system [range: 0 ~ 8, default: 4]
     I:max_planet_count=4
 
@@ -197,6 +263,21 @@ starmap {
 }
 
 
+storage {
+
+    energy {
+        # How much energy can the Fusion Reactor Controller hold
+        I:tile.fusion_reactor_controller=100000000
+    }
+
+    matter {
+        # How much matter can the Fusion Reactor Controller hold
+        I:tile.fusion_reactor_controller=2048
+    }
+
+}
+
+
 ##########################################################################################################
 # world gen
 #--------------------------------------------------------------------------------------------------------#
@@ -209,11 +290,23 @@ starmap {
 
     # Dimension id's in which the gravitational anomaly should spawn in
     I:gravitational_anomaly_dimensions <
-		-28
+        -28
+     >
+
+    # A blacklist of all the Dimensions ores shouldn't spawn in
+    I:ore_gen_blacklist <
+        -1
+        2
      >
 
     # The spawn change of the Rogue Android [range: 0 ~ 100, default: 3]
     I:rogue_android.spawn.chance=3
+
+    # The blacklist for Android spawn biomes [default: [Hell], [Sky]]
+    S:rouge.biome.blacklist <
+        Hell
+        Sky
+     >
     I:rouge_android.spawn.chance=3
 
     # Should Matter Overdrive Ore Blocks be Generated ?
