--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -2,7 +2,7 @@
 
 Equipment {
     # Set to TRUE to disable ALL armor sets.
-    B:DisableAllArmor=true
+    B:DisableAllArmor=false
 
     # Set to TRUE to disable ALL tool sets.
     B:DisableAllTools=true
@@ -11,7 +11,7 @@ Equipment {
     B:ShowDisabledEquipment=false
 
     Copper {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -28,7 +28,7 @@ Equipment {
     }
 
     Tin {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -45,7 +45,7 @@ Equipment {
     }
 
     Silver {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -62,7 +62,7 @@ Equipment {
     }
 
     Lead {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -79,7 +79,7 @@ Equipment {
     }
 
     Nickel {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -96,7 +96,7 @@ Equipment {
     }
 
     Electrum {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -113,7 +113,7 @@ Equipment {
     }
 
     Invar {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -130,7 +130,7 @@ Equipment {
     }
 
     Bronze {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
@@ -147,7 +147,7 @@ Equipment {
     }
 
     Platinum {
-        B:Armor=true
+        B:Armor=false
 
         Tools {
             B:Axe=true
