--- a/config/zyinhud.cfg
+++ b/config/zyinhud.cfg
@@ -430,13 +430,13 @@ safeoverlay {
     # Enable/Disable showing unsafe areas in the Nether.
     B:SafeOverlayDisplayInNether=false
 
-    # How far away unsafe spots should be rendered around the player measured in blocks. This can be changed in game with - + F7 and + + F7.
+    # How far away unsafe spots should be rendered around the player measured in blocks. This can be changed in game with - + L and + + L.
     I:SafeOverlayDrawDistance=20
 
     # Sets the Safe Overlay mode.
     S:SafeOverlayMode=OFF
 
-    # Enable/Disable showing unsafe areas through walls. Toggle in game with Ctrl + F7.
+    # Enable/Disable showing unsafe areas through walls. Toggle in game with Ctrl + L.
     B:SafeOverlaySeeThroughWalls=false
 
     # The transparency of the unsafe marks. Must be between greater than 0.1 and less than or equal to 1.
