Remove thermal foundation tools and armors

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7403,6 +7403,7 @@ immersiveengineering {
     B:metalDevice.8=false
     B:metalDevice.9=false
     B:metalDevice2=false
+    B:metalDevice2.1=false
     B:metalMultiblock=false
     B:metalMultiblock.2=false
     B:metalMultiblock.3=false
@@ -8941,6 +8942,7 @@ opencomputers {
     B:keyboard=false
     B:microcontroller=false
     B:motionSensor=false
+    B:netSplitter=false
     B:powerConverter=false
     B:powerDistributor=false
     B:print=false
