--- a/config/cofh/thermalfoundation/common.cfg
+++ b/config/cofh/thermalfoundation/common.cfg
@@ -2,7 +2,7 @@
 
 Equipment {
     # Set to TRUE to disable ALL armor sets.
-    B:DisableAllArmor=false
+    B:DisableAllArmor=true
 
     # Set to TRUE to disable ALL tool sets.
     B:DisableAllTools=true
@@ -28,7 +28,7 @@ Equipment {
     }
 
     Tin {
-        B:Armor=false
+        B:Armor=true
 
         Tools {
             B:Axe=true
@@ -233,13 +233,22 @@ Fluid {
     }
 
     Petrotheum {
-        # Enable this for Fluid Petrotheum to make things more in tune with the earth.
+        # Enable this for Fluid Petrotheum to break apart stone blocks.
         B:Effect=true
+
+        # Enable this for Fluid Petrotheum to have an EXTREME effect on stone blocks.
+        B:Effect.Extreme=false
 
         # Enable this for Fluid Petrotheum Source blocks to gradually fall downwards.
         B:Fall=true
     }
 
+}
+
+
+Holiday {
+    # Set this to TRUE to disable April Foolishness.
+    B:IHateApril=false
 }
 
 
@@ -443,7 +452,7 @@ Plugins {
 
 
 Version {
-    S:Identifier=1.7.10R1.2.0B1
+    S:Identifier=1.7.10R1.2.0
 }
 
 
