--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -36,6 +36,9 @@ general {
         0
      >
 
+    # Support for colourblind people, gives a text-based output on capacitor sides
+    B:ColourblindSupport=false
+
     # The amount of RF that equal 1 EU. 4 by default, so 4RF == 1EU and .25EU == 1RF
     I:"EU Conversion"=4
 
@@ -48,8 +51,8 @@ general {
     # By default all devices that accept cables have increased renderbounds to show cables even if the block itself is not in view. Disabling this reduces them to their minimum sizes, which might improve FPS on low-power PCs
     B:"Increased Renderboxes"=true
 
-    # Increase the distance at which certain TileEntities (specifically windmills) are still visible. Disable this to increase performance on weaker PCs
-    B:"Increased Tile Renderdistance"=false
+    # Increase the distance at which certain TileEntities (specifically windmills) are still visible. This is a modifier, so set it to 1 for default render distance, to 2 for doubled distance and so on.
+    B:"Increased Tile Renderdistance"=1.5
     B:"Support for colourblind people, gives a text-based output on capacitor sides"=false
 }
 
