--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -1013,6 +1013,23 @@ BiomesOPlenty {
 }
 
 
+"BuildCraft|Transport" {
+
+    "Desert Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Ocean Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 ChromatiCraft {
 
     "Ender Forest" {
