--- a/config/reccomplex.cfg
+++ b/config/reccomplex.cfg
@@ -6,24 +6,30 @@ balancing {
 
     # The base weight of RC village generation types. Vanilla average is about 10 - if you want to fully replace vanilla structures in villages, crank this up to something big. [range: 0 ~ 100000, default: 10]
     I:baseVillageSpawnWeight=10
-
-    # Structures from mods in this list will automatically be set not to generate. [default: ]
     S:disabledModGeneration <
      >
-
-    # Structures that will be hindered from generating. [default: ]
     S:disabledStructures <
      >
-
-    # Structures that be set to generate (if in the right directory), no matter what [default: ]
     S:forceEnabledStructures <
      >
+
+    # Resource Expression that will be applied to each loading inventory generator, determining if it should be set to 'active'. [default: ]
+    S:inventoryGeneratorGenerationMatcher=
+
+    # Resource Expression that will be applied to each loading inventory generator, determining if it should be loaded. [default: ]
+    S:inventoryGeneratorLoadMatcher=
 
     # Enabling this will make the mod register as little as possible, which enables it to be used server-side only. [default: false]
     B:lightweightMode=false
 
     # Within this block radius, default structures won't spawn (in the main dimension). [range: 0.0 ~ 500.0, default: 30.0]
     S:minDistToSpawnForGeneration=30.0
+
+    # Resource Expression that will be applied to each loading structure, determining if it should be set to 'active'. [default: ]
+    S:structureGenerationMatcher=
+
+    # Resource Expression that will be applied to each loading structure, determining if it should be loaded. [default: ]
+    S:structureLoadMatcher=
 
     # How often do structures spawn? [range: 0.0 ~ 10.0, default: 1.0]
     S:structureSpawnChance=0.5
