--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -88,8 +88,8 @@ features {
         B:ChestLoot=true
         B:DecorativeLights=true
         B:DecorativeQuartzBlocks=true
-        B:Flour=true
-        B:GrindStone=true
+        B:Flour=false
+        B:GrindStone=false
         B:Inscriber=true
         B:MeteoriteWorldGen=true
         B:SkyStoneChests=true
@@ -189,7 +189,7 @@ features {
     }
 
     services {
-        B:VersionChecker=true
+        B:VersionChecker=false
     }
 
     misc {
