--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,12 @@
 # Configuration file
 
+ae2stuff {
+    B:Encoder=false
+    B:Grower=false
+    B:Inscriber=false
+}
+
+
 amtgen {
     B:fuelGenerator=false
     B:lpTransformer=false
@@ -1998,6 +2005,14 @@ botania {
     B:biomeStoneA0Slab=false
     B:biomeStoneA0SlabFull=true
     B:biomeStoneA0Stairs=false
+    B:biomeStoneA0Wall=false
+    B:biomeStoneA0Wall.1=false
+    B:biomeStoneA0Wall.2=false
+    B:biomeStoneA0Wall.3=false
+    B:biomeStoneA0Wall.4=false
+    B:biomeStoneA0Wall.5=false
+    B:biomeStoneA0Wall.6=false
+    B:biomeStoneA0Wall.7=false
     B:biomeStoneA10Slab=false
     B:biomeStoneA10SlabFull=true
     B:biomeStoneA10Stairs=false
@@ -2164,6 +2179,7 @@ botania {
     B:dreamwood0Slab=false
     B:dreamwood0SlabFull=true
     B:dreamwood0Stairs=false
+    B:dreamwood0Wall=false
     B:dreamwood1Slab=false
     B:dreamwood1SlabFull=true
     B:dreamwood1Stairs=false
@@ -2206,6 +2222,9 @@ botania {
     B:ghostRail=false
     B:hourglass=false
     B:incensePlate=false
+    B:lightLauncher=false
+    B:lightRelay=false
+    B:lightRelay.1=false
     B:livingrock=true
     B:livingrock.1=true
     B:livingrock.2=true
@@ -2214,6 +2233,7 @@ botania {
     B:livingrock0Slab=false
     B:livingrock0SlabFull=true
     B:livingrock0Stairs=false
+    B:livingrock0Wall=false
     B:livingrock1Slab=false
     B:livingrock1SlabFull=true
     B:livingrock1Stairs=false
@@ -2226,6 +2246,7 @@ botania {
     B:livingwood0Slab=false
     B:livingwood0SlabFull=true
     B:livingwood0Stairs=false
+    B:livingwood0Wall=false
     B:livingwood1Slab=false
     B:livingwood1SlabFull=true
     B:livingwood1Stairs=false
@@ -2313,6 +2334,7 @@ botania {
     B:prismarine0Slab=false
     B:prismarine0SlabFull=true
     B:prismarine0Stairs=false
+    B:prismarine0Wall=false
     B:prismarine1Slab=false
     B:prismarine1SlabFull=true
     B:prismarine1Stairs=false
@@ -2374,6 +2396,7 @@ botania {
     B:reedBlock0Slab=false
     B:reedBlock0SlabFull=true
     B:reedBlock0Stairs=false
+    B:reedBlock0Wall=false
     B:rfGenerator=false
     B:root=true
     B:runeAltar=false
@@ -2421,6 +2444,10 @@ botania {
     B:stone0Slab=false
     B:stone0SlabFull=true
     B:stone0Stairs=false
+    B:stone0Wall=false
+    B:stone0Wall.1=false
+    B:stone0Wall.2=false
+    B:stone0Wall.3=false
     B:stone10Slab=false
     B:stone10SlabFull=true
     B:stone10Stairs=false
@@ -4279,6 +4306,7 @@ dcsapplemilk {
     B:defeatedcrowfilledCup2.7=false
     B:defeatedcrowfilledCup2.8=false
     B:defeatedcrowfilledCup2.9=false
+    B:defeatedcrowfilledSoupPan=false
     B:defeatedcrowflintBlock=false
     B:defeatedcrowflowerPot=false
     B:defeatedcrowflowerPot.4=false
@@ -6105,6 +6133,10 @@ gardentrees {
     B:thinlog.13271=false
     B:thinlog.13272=false
     B:thinlog.13273=false
+    B:thinlog.13283=false
+    B:thinlog.13284=false
+    B:thinlog.13285=false
+    B:thinlog.13286=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6248,6 +6280,10 @@ gardentrees {
     B:thinlog.5079=false
     B:thinlog.5080=false
     B:thinlog.5081=false
+    B:thinlog.5091=false
+    B:thinlog.5092=false
+    B:thinlog.5093=false
+    B:thinlog.5094=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6388,6 +6424,10 @@ gardentrees {
     B:thinlog.9175=false
     B:thinlog.9176=false
     B:thinlog.9177=false
+    B:thinlog.9187=false
+    B:thinlog.9188=false
+    B:thinlog.9189=false
+    B:thinlog.9190=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6440,6 +6480,10 @@ gardentrees {
     B:thinlog.983=false
     B:thinlog.984=false
     B:thinlog.985=false
+    B:thinlog.995=false
+    B:thinlog.996=false
+    B:thinlog.997=false
+    B:thinlog.998=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -6526,6 +6570,10 @@ gardentrees {
     B:thinlogfence.13271=false
     B:thinlogfence.13272=false
     B:thinlogfence.13273=false
+    B:thinlogfence.13283=false
+    B:thinlogfence.13284=false
+    B:thinlogfence.13285=false
+    B:thinlogfence.13286=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6669,6 +6717,10 @@ gardentrees {
     B:thinlogfence.5079=false
     B:thinlogfence.5080=false
     B:thinlogfence.5081=false
+    B:thinlogfence.5091=false
+    B:thinlogfence.5092=false
+    B:thinlogfence.5093=false
+    B:thinlogfence.5094=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6809,6 +6861,10 @@ gardentrees {
     B:thinlogfence.9175=false
     B:thinlogfence.9176=false
     B:thinlogfence.9177=false
+    B:thinlogfence.9187=false
+    B:thinlogfence.9188=false
+    B:thinlogfence.9189=false
+    B:thinlogfence.9190=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6861,6 +6917,10 @@ gardentrees {
     B:thinlogfence.983=false
     B:thinlogfence.984=false
     B:thinlogfence.985=false
+    B:thinlogfence.995=false
+    B:thinlogfence.996=false
+    B:thinlogfence.997=false
+    B:thinlogfence.998=false
 }
 
 
@@ -7441,6 +7501,15 @@ immersiveengineering {
     B:woodenDevice.4=false
     B:woodenDevice.5=false
     B:woodenStairs=false
+}
+
+
+immersiveintegration {
+    B:extendedPost=false
+    B:meDenseWireConnector=false
+    B:meWireConnector=false
+    B:redstoneWireConnector=false
+    B:steelTrapdoor=false
 }
 
 
