--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -39,7 +39,7 @@ client {
 
     replicator {
         # The total replication cost of each matter value. The energy cost is calculated like so: (matterAmount*EnergyCost)
-        I:cost.replication.energy=16000
+        I:cost.replication.energy=1600000
 
         # Fail chance of the Replicator in percent.
         D:fail=0.05
@@ -48,7 +48,7 @@ client {
         B:particles.vent=true
 
         # The replication speed in ticks per matter value
-        I:speed.replication=120
+        I:speed.replication=240
 
         # How much energy can the replicator hold
         I:storage.energy=512000
@@ -65,10 +65,10 @@ client {
 
     decomposer {
         # Decomposing cost per matter
-        I:cost.decompose=8000
+        I:cost.decompose=800000
 
         # The speed in ticks, of decomposing. (per matter)
-        I:speed.decompose=80
+        I:speed.decompose=160
 
         # How much energy can the Matter Decomposer hold
         I:storage.energy=512000
@@ -173,6 +173,147 @@ client {
 
     # Blacklist for items in the matter registry. Automatic Recipe calculation will ignore recipes with these items. Just add the unlocalized name or the ore dictionary name in the list.
     S:blacklist <
+		RotaryCraft:rotarycraft_block_blastglass
+		RotaryCraft:rotarycraft_block_blastpane
+		RotaryCraft:rotarycraft_item_canola
+		RotaryCraft:rotarycraft_item_ethanol
+		RotaryCraft:rotarycraft_item_extracts
+		RotaryCraft:rotarycraft_item_modextracts
+		RotaryCraft:rotarycraft_item_customextract
+		RotaryCraft:rotarycraft_item_engine
+		RotaryCraft:rotarycraft_item_shaft
+		RotaryCraft:rotarycraft_item_flywheel
+		RotaryCraft:rotarycraft_item_gearbox
+		RotaryCraft:rotarycraft_item_machine
+		RotaryCraft:rotarycraft_item_bedaxe
+		RotaryCraft:rotarycraft_item_bedboots
+		RotaryCraft:rotarycraft_item_bedchest
+		RotaryCraft:rotarycraft_item_bedgrafter
+		RotaryCraft:rotarycraft_item_bedhelm
+		RotaryCraft:rotarycraft_item_bedhoe
+		RotaryCraft:rotarycraft_item_bedjump
+		RotaryCraft:rotarycraft_item_bedlegs
+		RotaryCraft:rotarycraft_item_bedpack
+		RotaryCraft:rotarycraft_item_bedpick
+		RotaryCraft:rotarycraft_item_bedreveal
+		RotaryCraft:rotarycraft_item_bedsaw
+		RotaryCraft:rotarycraft_item_bedshears
+		RotaryCraft:rotarycraft_item_bedshovel
+		RotaryCraft:rotarycraft_item_bedsickle
+		RotaryCraft:rotarycraft_item_bedsword
+		RotaryCraft:rotarycraft_item_upgrade
+		ElectriCraft:electricraft_item_placer
+		ElectriCraft:electricraft_item_battery
+		ElectriCraft:electricraft_item_rfbattery
+		ElectriCraft:electricraft_item_wire
+		ElectriCraft:electricraft_block_wire
+		ElectriCraft:electricraft_block_cable
+		ReactorCraft:reactorcraft_item_fuel
+		ReactorCraft:reactorcraft_item_breederfuel
+		ReactorCraft:reactorcraft_item_plutonium
+		ReactorCraft:reactorcraft_item_thorium
+		ReactorCraft:reactorcraft_item_pellet
+		ReactorCraft:reactorcraft_item_ingots
+		ChromatiCraft:chromaticraft_block_chroma
+		ChromatiCraft:chromaticraft_block_colorlock
+		ChromatiCraft:chromaticraft_block_crystal
+		ChromatiCraft:chromaticraft_block_decay
+		ChromatiCraft:chromaticraft_block_decoplant
+		ChromatiCraft:chromaticraft_block_dimdata
+		ChromatiCraft:chromaticraft_block_dimgen
+		ChromatiCraft:chromaticraft_block_dimgentile
+		ChromatiCraft:chromaticraft_block_dye
+		ChromatiCraft:chromaticraft_block_dyeflower
+		ChromatiCraft:chromaticraft_block_dyegrass
+		ChromatiCraft:chromaticraft_block_dyeleaf
+		ChromatiCraft:chromaticraft_block_dyesapling
+		ChromatiCraft:chromaticraft_block_ender
+		ChromatiCraft:chromaticraft_block_fence
+		ChromatiCraft:chromaticraft_block_glow
+		ChromatiCraft:chromaticraft_block_glowleaf
+		ChromatiCraft:chromaticraft_block_glowlog
+		ChromatiCraft:chromaticraft_block_glowsapling
+		ChromatiCraft:chromaticraft_block_gol
+		ChromatiCraft:chromaticraft_block_golcontrol
+		ChromatiCraft:chromaticraft_block_heatlamp
+		ChromatiCraft:chromaticraft_block_hive
+		ChromatiCraft:chromaticraft_block_hover
+		ChromatiCraft:chromaticraft_block_lamp
+		ChromatiCraft:chromaticraft_block_lampblock
+		ChromatiCraft:chromaticraft_block_lockfence
+		ChromatiCraft:chromaticraft_block_lockfreeze
+		ChromatiCraft:chromaticraft_block_lockkey
+		ChromatiCraft:chromaticraft_block_lootchest
+		ChromatiCraft:chromaticraft_block_path
+		ChromatiCraft:chromaticraft_block_plant
+		ChromatiCraft:chromaticraft_block_portal
+		ChromatiCraft:chromaticraft_block_powertree
+		ChromatiCraft:chromaticraft_block_pylon
+		ChromatiCraft:chromaticraft_block_pylonstruct
+		ChromatiCraft:chromaticraft_block_rainbowcrystal
+		ChromatiCraft:chromaticraft_block_rainbowleaf
+		ChromatiCraft:chromaticraft_block_rainbowsapling
+		ChromatiCraft:chromaticraft_block_relay
+		ChromatiCraft:chromaticraft_block_rift
+		ChromatiCraft:chromaticraft_block_rune
+		ChromatiCraft:chromaticraft_block_structshield
+		ChromatiCraft:chromaticraft_block_super
+		ChromatiCraft:chromaticraft_block_tank
+		ChromatiCraft:chromaticraft_block_tieredore
+		ChromatiCraft:chromaticraft_block_tieredplant
+		ChromatiCraft:chromaticraft_block_tilecrystal
+		ChromatiCraft:chromaticraft_block_tilecrystalnoncube
+		ChromatiCraft:chromaticraft_block_tileentity
+		ChromatiCraft:chromaticraft_block_tilemodelled
+		ChromatiCraft:chromaticraft_block_tilemodelled2
+		ChromatiCraft:chromaticraft_block_tileplant
+		ChromatiCraft:chromaticraft_block_tnt
+		ChromatiCraft:chromaticraft_block_voidrift
+		ChromatiCraft:chromaticraft_item_aurapouch
+		ChromatiCraft:chromaticraft_item_berry
+		ChromatiCraft:chromaticraft_item_bucket
+		ChromatiCraft:chromaticraft_item_builder
+		ChromatiCraft:chromaticraft_item_bulkmover
+		ChromatiCraft:chromaticraft_item_capture
+		ChromatiCraft:chromaticraft_item_chaingun
+		ChromatiCraft:chromaticraft_item_cluster
+		ChromatiCraft:chromaticraft_item_crafting
+		ChromatiCraft:chromaticraft_item_dimgen
+		ChromatiCraft:chromaticraft_item_duplicator
+		ChromatiCraft:chromaticraft_item_dye
+		ChromatiCraft:chromaticraft_item_elemental
+		ChromatiCraft:chromaticraft_item_endercrystal
+		ChromatiCraft:chromaticraft_item_excavator
+		ChromatiCraft:chromaticraft_item_finder
+		ChromatiCraft:chromaticraft_item_fragment
+		ChromatiCraft:chromaticraft_item_growth
+		ChromatiCraft:chromaticraft_item_help
+		ChromatiCraft:chromaticraft_item_hoverwand
+		ChromatiCraft:chromaticraft_item_lens
+		ChromatiCraft:chromaticraft_item_link
+		ChromatiCraft:chromaticraft_item_linktool
+		ChromatiCraft:chromaticraft_item_misc
+		ChromatiCraft:chromaticraft_item_modinteract
+		ChromatiCraft:chromaticraft_item_multitool
+		ChromatiCraft:chromaticraft_item_orepick
+		ChromatiCraft:chromaticraft_item_oresilk
+		ChromatiCraft:chromaticraft_item_pendant
+		ChromatiCraft:chromaticraft_item_pendant3
+		ChromatiCraft:chromaticraft_item_placer
+		ChromatiCraft:chromaticraft_item_potion
+		ChromatiCraft:chromaticraft_item_rift
+		ChromatiCraft:chromaticraft_item_seed
+		ChromatiCraft:chromaticraft_item_shard
+		ChromatiCraft:chromaticraft_item_shoo
+		ChromatiCraft:chromaticraft_item_splashgun
+		ChromatiCraft:chromaticraft_item_storage
+		ChromatiCraft:chromaticraft_item_teleport
+		ChromatiCraft:chromaticraft_item_tiered
+		ChromatiCraft:chromaticraft_item_tool
+		ChromatiCraft:chromaticraft_item_transition
+		ChromatiCraft:chromaticraft_item_vacuumgun
+		ChromatiCraft:chromaticraft_item_voidcell
+		ChromatiCraft:chromaticraft_item_warp
      >
 
     ##########################################################################################################
