--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -10,9 +10,9 @@
 
 
 "control setup" {
-    B:"Allow Danger in Rainbow Forests"=false
+    B:"Allow Danger in Rainbow Forests"=true
     B:"Allow duplication wand to copy TileEntities"=false
-    B:"Always Respawn EnderDragon"=false
+    B:"Always Respawn EnderDragon"=true
     B:"Auxiliary Fragment Acquisition"=false
     I:"Chest Generation Tier"=4
     B:"Crystal Plants May Drop Shards"=true
@@ -36,7 +36,7 @@
     B:"Lamp Noises"=true
     B:"Liquid Ender Effect"=true
     I:"Lumen Relay Range"=16
-    B:"Make ThaumCraft integration require ThaumCraft progression"=false
+    B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
     B:"Pylons Chunkload Selves Once Used"=true
