--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -35,7 +35,7 @@ config {
     I:giveSleepCounterOnSleep=4
 
     # How much hunger is lost for slept tick [0 = none]
-    D:hungerPerSleptTick=1.0E-5
+    D:hungerPerSleptTick=0
 
     # How much sleep counter you can reach before being denied sleep privilege. [range: 1 ~ 2147483647, default: 18000]
     I:maximumSleepCounter=18000
