--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -98,7 +98,7 @@ general {
     B:pumpsNeedRealPower=false
 
     # Should I check the BuildCraft version on startup?
-    B:updateCheck=true
+    B:updateCheck=false
     S:version=7.0.15
 
     pipes {
@@ -167,7 +167,7 @@ power {
 
 
 vars {
-    S:version.seen=7.0.13
+    S:version.seen=7.0.16
 }
 
 
