--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -25,7 +25,7 @@ general {
     B:"Heads drop randomly"=true
 
     # Setting this to true will hide the named player heads from the creative tab and NEI
-    B:"Hide player heads from tab"=false
+    B:"Hide player heads from tab"=true
 
     # The bigger this number the easier it will be to find heads in dungeons.
     # Some heads will be rarer than others.
@@ -286,6 +286,9 @@ heads {
 		Haggle1996
 		SentinalH
 		hotrodnate
+		shiva_chirr
+		Solego
+		HappyHalfling
      >
     S:technic <
         GenPage
@@ -372,10 +375,10 @@ mob {
     I:"Minimum group size"=4
 
     # The change the mob will spawn. Base values: zombies, skeletons, spider, creepers = 100, endermen = 10, witches = 5
-    I:"Spawn probability"=80
+    I:"Spawn probability"=50
 
     # This prefix will be shown in front of celebrities names in-world. Meant to be used to differentiate celebrities from real players.
-    S:prefix=
+    S:prefix=Angry 
 }
 
 
