--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -10,8 +10,8 @@
     B:"Increase sound channel count"=true
     B:"Log Sync Packet CME Avoidance"=true
     B:"Log errors to chat"=true
-    B:"Only show update notice to Ops or SSP"=false
-    B:"Only show update notice to pack creator"=false
+    B:"Only show update notice to Ops or SSP"=true
+    B:"Only show update notice to pack creator"=true
     B:"Restore Obsidian Blast Resistance"=true
     B:"Show TileEntity NBT when using TAB"=false
     B:"Slow Sync Packets - Only use this as a last resort"=false
